--- a/languages/gestpay-for-woocommerce-it_IT.po
+++ b/languages/gestpay-for-woocommerce-it_IT.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.0.6\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 "Language: it_IT\n"
@@ -195,3 +195,6 @@ msgstr "Attenzione! Ci dispiace ma il browser che stai utilizzando non è più s
 
 msgid "Validation error: please double check required fields and try again. If this error persists, please contact the site administrator."
 msgstr "Errore di validazione: si prega di ricontrollare i campi obbligatori e di riprovare. Se l'errore continua, si prega di contattare l'amministratore del sito."
+
+msgid "Cardholder Name"
+msgstr "Nome del proprietario della carta"
